Fix z-index of the genotypes links div
Make sure it doesn't appear above the delete genotype confirmation
dialog.

--- a/root/static/css/style.css
+++ b/root/static/css/style.css
@@ -355,7 +355,7 @@ table.list tr td {
   border: 2px solid #bbb;
   padding: 3px;
   font-size: 90%;
-  z-index: 999999;
+  z-index: 100;
   position: absolute;
   overflow: auto;
   background-color: white;
